discount part added

--- a/newyear.html
+++ b/newyear.html
@@ -21,7 +21,10 @@
     </header>
 
     <main>
-
+        <p class="discount">65% OFF</p>
+        <p class="offer">OUR HOLIDAY DEALS ARE BETTER</p>
+        <p id="allCat">ALL CATEGORIES</p>
+        <img src="/Images/New Year Photo.png" alt="" style="padding-left: 400px;">
     </main>
 
     <footer>
