second banner half

--- a/newyear.html
+++ b/newyear.html
@@ -21,10 +21,18 @@
     </header>
 
     <main>
-        <p class="discount">65% OFF</p>
+        <!-- Dicount part -->
+        <div>
+            <p class="discount">65% OFF</p>
         <p class="offer">OUR HOLIDAY DEALS ARE BETTER</p>
         <p id="allCat">ALL CATEGORIES</p>
         <img src="/Images/New Year Photo.png" alt="" style="padding-left: 400px;">
+        </div>
+        <!-- second banner -->
+        <div class="background2">
+            <h1 class="banner2" style="margin: 0;">Welcome to midnight party</h1>
+            <h1 class="banner2">midnight party</h1>
+        </div>
     </main>
 
     <footer>
