index renamed and second banner half complete

--- a/index.html
+++ b/index.html
@@ -29,9 +29,12 @@
         <img src="/Images/New Year Photo.png" alt="" style="padding-left: 400px;">
         </div>
         <!-- second banner -->
-        <div class="background2">
-            <h1 class="banner2" style="margin: 0;">Welcome to midnight party</h1>
-            <h1 class="banner2">midnight party</h1>
+        <div class="background2" >
+            <p class="banner2" style="padding-top: 200px;">Welcome to</p>
+            <p class="banner2">midnight party</p>
+          
+            <p id="para2">Celebrate the New Year with a bang! Enjoy a fantastic 65% discount on our website. Don't miss out on this limited-time offer—start the year right with savings on top-notch products. Cheers to a successful 2024!</p>
+            <button type="button" class="join">Join Now</button>
         </div>
     </main>
 
