--- a/index.html
+++ b/index.html
@@ -26,7 +26,7 @@
             <p class="discount">65% OFF</p>
         <p class="offer">OUR HOLIDAY DEALS ARE BETTER</p>
         <p id="allCat">ALL CATEGORIES</p>
-        <img src="/Images/New Year Photo.png" alt="" style="padding-left: 400px;">
+        <img src="/Images/newyphoto.png" alt="" style="padding-left: 400px;">
         </div>
         <!-- second banner -->
         <div class="background2" >
