2nd banner complete, linear background solved

--- a/index.html
+++ b/index.html
@@ -30,10 +30,17 @@
         </div>
         <!-- second banner -->
         <div class="background2" >
-            <p class="banner2" style="padding-top: 200px;">Welcome to</p>
-            <p class="banner2">midnight party</p>
-            <p id="para2">Celebrate the New Year with a bang! Enjoy a fantastic 65% discount on our website. Don't miss out on this limited-time offer—start the year right with savings on top-notch products. Cheers to a successful 2024!</p>
-            <button type="button" class="join">Join Now</button>
+            <div id="banner-flex">
+                <div class="banner-flex">
+                    <p class="banner2" style="padding-top: 200px;">Welcome to</p>
+                <p class="banner2">midnight party</p>
+                <p id="para2">Celebrate the New Year with a bang! Enjoy a fantastic 65% discount on our website. Don't miss out on this limited-time offer—start the year right with savings on top-notch products. Cheers to a successful 2024!</p>
+                <button type="button" class="join">Join Now</button>
+            </div>
+            <div>
+                <img src="/imgs/group70.png" alt="" style="margin-top: 70px;">
+            </div>
+            </div>
         </div>
     </main>
 
