--- a/index.html
+++ b/index.html
@@ -35,13 +35,27 @@
                     <p class="banner2" style="padding-top: 200px;">Welcome to</p>
                 <p class="banner2">midnight party</p>
                 <p id="para2">Celebrate the New Year with a bang! Enjoy a fantastic 65% discount on our website. Don't miss out on this limited-time offer—start the year right with savings on top-notch products. Cheers to a successful 2024!</p>
-                <button type="button" class="join">Join Now</button>
+                <button type="button" class="join" style="margin-left: 80px;">Join Now</button>
             </div>
             <div>
                 <img src="/imgs/group70.png" alt="" style="margin-top: 70px;">
             </div>
             </div>
         </div>
+
+        <!-- Location and time-->
+        <div id="location">
+            <div style=" padding-top: 100px;">
+                <div>
+                    <h6><span>Place: </span>New Park Hotel</h6>
+                    <h6><span>Date: </span>31 December Night 2023 </h6>
+                    <h6><span>Time: </span>Evening 7.30 pm to 12.30 am</h6>
+                    <button type="button" class="join" style="margin-top: 20px ;">Join Now</button>
+                </div>
+            </div>
+        </div>
+<!-- Location and time done-->
+
     </main>
 
     <footer>
