coming sooon feature added

--- a/index.html
+++ b/index.html
@@ -56,6 +56,26 @@
         </div>
 <!-- Location and time done-->
 
+<!-- Coming soon -->
+        <section id="coming-sec" >
+            <div>
+                <div id="soon">
+                    <p id="offer">NEW BEST OFFER</p>
+                <h2 id="soonh2">Coming Soon</h2>
+                <p id="exiting">Exciting news is on the horizon! Brace yourself for the unveiling of our upcoming New Year's special - our best offer ever is on its way! Stay tuned for an exclusive deal that will redefine your 2024. Get ready to seize unparalleled savings that you won't want to miss. The countdown to the ultimate offer begins now!</p>
+                </div>
+            </div>
+
+            <div class="best-img">
+                <img src="/imgs/ellipse1.png" alt="" />
+              </div>
+            <div style="padding-left: 50px;">
+                <h2 id="year">2024</h2>
+                <p id="thrlli">Thrilling updates incoming! We're gearing up for an exclusive New Year celebration that promises unparalleled joy and surprises.</p>
+                <img src="/imgs/group96.png" alt="" width="100px" height="100px">
+            </div>
+        </section>
+
     </main>
 
     <footer>
