holiday saled banner added

--- a/index.html
+++ b/index.html
@@ -75,7 +75,16 @@
                 <img src="/imgs/group96.png" alt="" width="100px" height="100px">
             </div>
         </section>
+<!-- Holiday sale -->
+        <section>
+            <div id="banner3">
+                <p id="functional">WHAT IS FUNCTIONAL</p>
+                <h1 id="holiday"> <span id="holiday1">Holidays</span> Sale 50%</h1>
+                <p id="explore">Explore the magic of the holiday season with a delightful 50% off! Dive into a world of joy where functionality meets elegance. Immerse yourself in a journey of discovery as we redefine what is functional for you. Join us in celebrating the festive spirit with exclusive offers that elevate your experience. Happy Holidays!</p>
+            </div>
+        </section>
 
+    
     </main>
 
     <footer>
