portfolio header added

--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
         <section id="coming-sec" >
             <div>
                 <div id="soon">
-                    <p id="offer">NEW BEST OFFER</p>
+                    <p class="offer">NEW BEST OFFER</p>
                 <h2 id="soonh2">Coming Soon</h2>
                 <p id="exiting">Exciting news is on the horizon! Brace yourself for the unveiling of our upcoming New Year's special - our best offer ever is on its way! Stay tuned for an exclusive deal that will redefine your 2024. Get ready to seize unparalleled savings that you won't want to miss. The countdown to the ultimate offer begins now!</p>
                 </div>
@@ -82,6 +82,17 @@
                 <h1 id="holiday"> <span id="holiday1">Holidays</span> Sale 50%</h1>
                 <p id="explore">Explore the magic of the holiday season with a delightful 50% off! Dive into a world of joy where functionality meets elegance. Immerse yourself in a journey of discovery as we redefine what is functional for you. Join us in celebrating the festive spirit with exclusive offers that elevate your experience. Happy Holidays!</p>
             </div>
+        </section>
+
+        <!-- Our awesome portfolio -->
+        <section style="margin-left: 140px; margin-top: 100px;">
+            <div>
+                <p id="besg">THE BEST GIFTS</p>
+                <h3 id="oura">Our Awesome Portfolio</h3>
+                <p id="introo">Introducing our impressive portfolio! Dive into a world of creativity and innovation as we showcase projects that speak volumes about our commitment to excellence. </p>
+            </div>
+            <div></div>
+
         </section>
 
     
