portfolio pictures added

--- a/index.html
+++ b/index.html
@@ -94,7 +94,32 @@
             <div></div>
 
         </section>
+<!-- Adding images -->
+        <div style="margin-left: 140px;">
+            <div class="items" style="margin-bottom: 5px;">
+              <div class="product">
+                <img src="/imgs/rectangle3.png" alt="">
+              </div>
+              <div class="product">
+                <img src="/imgs/rectangle4.png" alt="">
+              </div>
+              <div class="product">
+                <img src="imgs/rectangle5.png" alt="">
+              </div>
+            </div>
 
+            <div class="items">
+                <div class="product">
+                    <img src="/imgs/rectangle6.png" alt="">
+                </div>
+                <div class="product">
+                    <img src="/imgs/rectangle7.png" alt="">
+                </div>
+                <div class="product">
+                    <img src="/imgs/rectangle8.png" alt="">
+                </div>
+            </div>
+        </div>
     
     </main>
 
