Subscribe Newsletter added

--- a/index.html
+++ b/index.html
@@ -120,7 +120,20 @@
                 </div>
             </div>
         </div>
-    
+    <!-- adding subscription box -->
+    <div class="subs-container">
+        <div>
+            <img src="/imgs/group61.png" alt="" style=" padding-left: 600px;">
+        <p id="subs">Subscribe Newsletter</p>
+        <p id="subsnews">Subscribe to our newsletter for the latest updates and exclusive offers. Stay connected with us as we share exciting news, curated content, and special promotions.</p>
+        </div>
+
+        <form action="">
+            <input type="email" name="" id="email" placeholder="user@gmail.com" />
+            <button>Subscribe</button>
+          </form>
+</div>
+
     </main>
 
     <footer>
