final push assignment 1

--- a/index.html
+++ b/index.html
@@ -128,7 +128,7 @@
         <p id="subsnews">Subscribe to our newsletter for the latest updates and exclusive offers. Stay connected with us as we share exciting news, curated content, and special promotions.</p>
         </div>
 
-        <form action="">
+        <form action="" style="padding-bottom: 20px;">
             <input type="email" name="" id="email" placeholder="user@gmail.com" />
             <button>Subscribe</button>
           </form>
@@ -136,8 +136,33 @@
 
     </main>
 
-    <footer>
-
+    <footer id="footer">
+        <div id="con-info">
+            <div id="address">
+                <h3 class="addres">44, Big Building Roosevelt Street </h3> 
+                <h3 class="addres">Beach Gardens Florida 33410</h3>
+            </div>
+            <!-- phone and website -->
+            <div id="phwebsite"> 
+                <div style="display: flex;">
+                    <img src="/imgs/call.png" alt="" style="padding-right: 20px;">
+                    <h3 class="addres">+00 123 584 124</h3> 
+                </div>
+                <div style="display: flex;">
+                    <img src="/imgs/website.png" alt="" style="padding-right: 20px;">
+                    <h3 class="addres">www.website.com</h3> 
+                </div>
+        
+            </div>
+        </div>
+<!-- contact info added -->
+        <div id="social">
+            <img src="imgs/facbook.png" alt=""><img src="/imgs/insta.png" alt=""><img src="/imgs/twitter.png" alt=""><img src="/imgs/likedin.png" alt="">
+        </div>
+        <div style="justify-content: space-between; display: flex;">
+            <h3 id="allr" style="padding-left: 140px;">2017, All Rights Reserved.</h3>
+            <h3 id="uns" style="padding-right: 140px;">Unsubscribe</h3>
+        </div>
     </footer>
 </body>
 </html>
